19965
example with + but - also breaks.

{noformat}
scala> val `+` : Int = 0
+: Int = 0

scala> `+` * 6 
<console>:1: error: ';' expected but integer literal found.
       `+` * 6 
             ^
scala> val `*` : Int = 0
*: Int = 0

scala> `*` * 6
res1: Int = 0
{noformat}
